--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,47 @@
 $mobile-widht: 375px;
 
 
+$white-1 : #F5F5F7;
+$white-2 : #EDEDED;
+$white-3 : #ffffff;
+$white-4 : #FEFEFE;
+$white-5 : #F9F9F9;
+
+
+$gray-1: #757575;
+$gray-2 : #C4C4C4;
+
+$black-1 : #424242;
+$black-2 : #000000;
+
+$main-blue : #509BF8;
+
+$size7px : 0.4375rem;
+
+$size12px : 0.75rem;
+$size13px : 0.8125rem;
+$size14px : 0.875rem;
+$size17px : 1.0625rem;
+$size18px : 1.125rem;
+$size20px : 1.25rem;
+
+$size21px : 1.3125rem;
+$size24px : 1.5rem;
+$size30px : 1.875rem;
+
+$size35px : 2.1875rem;
+$size39px : 2.4375rem;
+$size40px : 2.5rem;
+
+$size50px : 3.125rem;
+
+$size121px : 7.5625rem;
+
+$size157px : 9.8125rem;
+
+$size335px : 20.9375rem;
+
+
 * {
     box-sizing: border-box;
     padding: 0;
