Feat: 공통 모달 컴포넌트 추가
src/components 디렉토리 생성 후 modal 폴더로 이동

--- a/src/styles/pages/QRTag.module.scss
+++ b/src/styles/pages/QRTag.module.scss
@@ -1,3 +1,5 @@
+@import "../global.scss";
+
 .container {
   max-width: 1280px;
   margin: 0 auto;
@@ -26,7 +28,7 @@
   width: fit-content;
   margin: 0 auto;
   padding: 1rem;
-  margin: 3rem 0;
+  margin: 2rem 0;
 }
 
 .title {
@@ -37,7 +39,7 @@
 }
 
 .subtitle {
-  margin: 0 0 1rem 0;
+  // margin: 0 0 1rem 0;
   padding: 0;
   color: rgba(0, 0, 0, 0.6);
 }
@@ -56,7 +58,7 @@
 .qr-share-button {
   border: 0;
   border-radius: 30px;
-  background-color: dodgerblue;
+  background-color: $main-blue;
   color: #fff;
   font-size: 1rem;
   padding: 1rem 2rem;
