--- a/src/styles/pages/Chat.module.scss
+++ b/src/styles/pages/Chat.module.scss
@@ -1,6 +1,6 @@
 .container {
   max-width: 768px;
-  height: 100vh;
+  height: 89vh;
   margin: 0 auto;
   text-align: center;
   overflow-y: hidden;
@@ -32,44 +32,45 @@
 
   display: flex;
   flex-direction: column;
-}
-.inchat .notice {
-  color: #c4c4c4;
-  font-size: 0.9rem;
-  padding: 1rem 0;
-}
-.inchat .receive {
-  background-color: #ededed;
-  width: fit-content;
-  max-width: 75%;
-  text-align: start;
-  padding: 0.7rem;
-  border-radius: 1rem 1rem 1rem 0;
-  color: #757575;
-  margin: 0.1rem 0;
-  font-size: 0.9rem;
 
-  transform-origin: 0 100%;
-  animation-duration: 0.1s;
-  animation-timing-function: ease-out;
-  animation-name: balloon-pop;
-}
-.inchat .send {
-  background-color: rgb(30, 143, 255);
-  width: fit-content;
-  max-width: 75%;
-  text-align: start;
-  padding: 0.7rem;
-  border-radius: 1rem 1rem 0 1rem;
-  color: #f9f9f9;
-  margin: 0.1rem 0;
-  margin-left: auto;
-  font-size: 0.9rem;
+  .notice {
+    color: #c4c4c4;
+    font-size: 0.9rem;
+    padding: 1rem 0;
+  }
+  .receive {
+    background-color: #ededed;
+    width: fit-content;
+    max-width: 75%;
+    text-align: start;
+    padding: 0.7rem;
+    border-radius: 1rem 1rem 1rem 0;
+    color: #757575;
+    margin: 0.1rem 0;
+    font-size: 0.9rem;
 
-  transform-origin: 100% 100%;
-  animation-duration: 0.1s;
-  animation-timing-function: ease-out;
-  animation-name: balloon-pop;
+    transform-origin: 0 100%;
+    animation-duration: 0.1s;
+    animation-timing-function: ease-out;
+    animation-name: balloon-pop;
+  }
+  .send {
+    background-color: rgb(30, 143, 255);
+    width: fit-content;
+    max-width: 75%;
+    text-align: start;
+    padding: 0.7rem;
+    border-radius: 1rem 1rem 0 1rem;
+    color: #f9f9f9;
+    margin: 0.1rem 0;
+    margin-left: auto;
+    font-size: 0.9rem;
+
+    transform-origin: 100% 100%;
+    animation-duration: 0.1s;
+    animation-timing-function: ease-out;
+    animation-name: balloon-pop;
+  }
 }
 /* balloon animation */
 @keyframes balloon-pop {
@@ -82,6 +83,7 @@
 }
 
 .input-bar {
+  z-index: 0;
   background-color: #fff;
   width: 100%;
   min-height: 4rem;
