[feat] login page create

--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -1,6 +1,6 @@
 @import "../global.scss";
 
-@media (max-width: $mobile-widht) {
+@media (max-width: $mobile-width) {
     .container {
         display: flex;
         width: 100%;
