[feat] no account login page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,6 +20,8 @@ $main-blue : #509BF8;
 $main-blue-2: #B9D7FC;
 
 $size1px : 0.0625rem;
+$size2px : 0.125rem;
+$size4px : 0.25rem;
 $size7px : 0.4375rem;
 $size8px : 0.5rem;
 
@@ -41,6 +43,7 @@ $size35px : 2.1875rem;
 $size39px : 2.4375rem;
 $size40px : 2.5rem;
 
+$size48px : 3rem;
 $size50px : 3.125rem;
 
 $size72px : 4.5rem;
@@ -54,18 +57,24 @@ $size140px : 8.75rem;
 
 $size152px : 9.5rem;
 $size157px : 9.8125rem;
+$size158px : 9.875rem;
 
 $size213px : 13.3125rem;
 
 
 $size300px : 18.75rem;
+$size328px : 20.5rem;
 $size335px : 20.9375rem;
+
+$size343px : 21.4375rem;
 
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
+  font-family: 'Apple SD Gothic Neo';
 }
 
 html,
@@ -73,4 +82,85 @@ body {
   width: 100%;
   height: 100%;
   font-family: var(--fontNoto);
+}
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 100;
+  src: local('Apple SD Gothic Neo Thin'),
+    url('./font/100_AppleSDGothicNeo-Thin.woff2') format('woff2'),
+    url('./font/100_AppleSDGothicNeo-Thin.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 200;
+  src: local('Apple SD Gothic Neo UltraLight'),
+    url('./font/200_AppleSDGothicNeo-UltraLight.woff2') format('woff2'),
+    url('./font/200_AppleSDGothicNeo-UltraLight.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Apple SD Gothic Neo Light'),
+    url('./font/300_AppleSDGothicNeo-Light.woff2') format('woff2'),
+    url('./font/300_AppleSDGothicNeo-Light.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Apple SD Gothic Neo Medium'),
+    url('./font/400_AppleSDGothicNeo-Medium.woff2') format('woff2'),
+    url('./font/400_AppleSDGothicNeo-Medium.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Apple SD Gothic Neo Regular'),
+    url('./font/500_AppleSDGothicNeo-Regular.woff2') format('woff2'),
+    url('./font/500_AppleSDGothicNeo-Regular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Apple SD Gothic Neo SemiBold'),
+    url('./font/600_AppleSDGothicNeo-SemiBold.woff2') format('woff2'),
+    url('./font/600_AppleSDGothicNeo-SemiBold.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Apple SD Gothic Neo Bold'),
+    url('./font/700_AppleSDGothicNeo-Bold.woff2') format('woff2'),
+    url('./font/700_AppleSDGothicNeo-Bold.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 800;
+  src: local('Apple SD Gothic Neo ExtraBold'),
+    url('./font/800_AppleSDGothicNeo-ExtraBold.woff2') format('woff2'),
+    url('./font/800_AppleSDGothicNeo-ExtraBold.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 900;
+  src: local('Apple SD Gothic Neo Heavy'),
+    url('./font/900_AppleSDGothicNeo-Heavy.woff2') format('woff2'),
+    url('./font/900_AppleSDGothicNeo-Heavy.otf') format('opentype');
 }
