[feat] account login page create

--- a/src/styles/components/TextInput.module.scss
+++ b/src/styles/components/TextInput.module.scss
@@ -22,6 +22,10 @@
 
             margin-top: $size16px;
 
+            &:focus-visible {
+                outline: none;
+            }
+
             &::placeholder {
                 color: $gray-2;
             }
