--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -43,6 +43,7 @@ $size35px : 2.1875rem;
 $size39px : 2.4375rem;
 $size40px : 2.5rem;
 
+$size44px : 2.75rem;
 $size48px : 3rem;
 $size50px : 3.125rem;
 
@@ -58,6 +59,8 @@ $size140px : 8.75rem;
 $size152px : 9.5rem;
 $size157px : 9.8125rem;
 $size158px : 9.875rem;
+
+$size178px : 11.125rem;
 
 $size213px : 13.3125rem;
 
