[feat] new account create page

--- a/src/styles/components/PasswordInput.module.scss
+++ b/src/styles/components/PasswordInput.module.scss
@@ -49,5 +49,15 @@
 
             margin-top: $size12px;
         }
+
+        .errorText {
+            color: $main-blue;
+            font-size: $size10px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+
+            margin-top: $size4px;
+        }
     }
 }
