--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,6 +24,7 @@ $size2px : 0.125rem;
 $size4px : 0.25rem;
 $size7px : 0.4375rem;
 $size8px : 0.5rem;
+$size10px : 0.625rem;
 
 $size12px : 0.75rem;
 $size13px : 0.8125rem;
@@ -40,6 +41,7 @@ $size30px : 1.875rem;
 
 $size32px : 2rem;
 $size35px : 2.1875rem;
+$size36px : 2.25rem;
 $size39px : 2.4375rem;
 $size40px : 2.5rem;
 
@@ -48,6 +50,7 @@ $size48px : 3rem;
 $size50px : 3.125rem;
 
 $size72px : 4.5rem;
+$size80px : 5rem;
 
 $size83px : 5.1875rem;
 
