Feat: 사이드바 기능 구현
사이드바 열고 닫기 기능 구현, 내부 디자인은 미완

--- a/src/styles/pages/Chat.module.scss
+++ b/src/styles/pages/Chat.module.scss
@@ -20,6 +20,11 @@
   align-items: center;
   justify-content: space-between;
   text-align: center;
+
+  .side-menu-btn {
+    background: none;
+    border: none;
+  }
 }
 
 .inchat {
