--- a/src/components/sidemenu/SideMenu.module.scss
+++ b/src/components/sidemenu/SideMenu.module.scss
@@ -34,16 +34,22 @@
     position: absolute;
     top: 0;
     left: -100%;
-    padding: 3rem;
+    padding: 4rem 3rem;
 
     transition: 0.3s ease;
+
+    .logo {
+      position: absolute;
+      top: 1.5rem;
+      left: 1.5rem;
+    }
 
     .close-button {
       width: 1rem;
       height: 1rem;
       position: absolute;
-      top: 1rem;
-      right: 1rem;
+      top: 1.5rem;
+      right: 1.5rem;
 
       border: 0;
       background: none;
@@ -51,16 +57,30 @@
 
     .content {
       text-align: start;
-      line-height: 2.4;
+      font-size: 0.9rem;
 
       h3 {
         color: $main-blue;
-        margin-top: 1rem;
+        margin-top: 1.5rem;
       }
 
       li {
         list-style: none;
         font-size: 0.9rem;
+        padding: 0.5rem 0;
+        color: #757575;
+      }
+
+      .icon-wrapper {
+        height: 100%;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+
+        * {
+          position: relative;
+          top: 0.25rem;
+        }
       }
     }
   }
