--- a/src/styles/pages/Chat.module.scss
+++ b/src/styles/pages/Chat.module.scss
@@ -33,6 +33,25 @@
   display: flex;
   flex-direction: column;
 
+  .guide-wrapper {
+    display: flex;
+    gap: 0.5rem;
+    padding-top: 0.5rem;
+
+    :first-child {
+      min-width: 40px;
+      min-height: 40px;
+    }
+    .guide {
+      text-align: start;
+      color: #757575;
+      font-size: 0.8rem;
+      line-height: 1.5;
+      padding: 0.75rem;
+      background-color: #ededed;
+      border-radius: 0.5rem;
+    }
+  }
   .notice {
     color: #c4c4c4;
     font-size: 0.9rem;
